animation for title, ball and navbar

--- a/ball-threejs/index.html
+++ b/ball-threejs/index.html
@@ -27,6 +27,8 @@
         <a class="nav-link" href="#">About</a>
       </li>
     </ul>
+
+    <h1 class="title">Cool Spehere</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
