--- a/earthjs/index.html
+++ b/earthjs/index.html
@@ -7,7 +7,7 @@
     <title>Earth JS</title>
   </head>
   <body>
-   
+   <canvas class="webgl"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
