--- a/threejs-book-exercises/exercise-1/index.html
+++ b/threejs-book-exercises/exercise-1/index.html
@@ -7,8 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="#scene-container"></div>
+    <div id="scene-container"></div>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.js" defer></script>
   </body>
 </html>
